Cambios en el filtro de de Job Applicants

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -5,5 +5,8 @@
      },
      "altaUser":{
           "titulo":"Crear Usuario"
+     },
+     "dashboard":{
+          "titulo":"Solicitantes a Trabajo"
      }
 }
