--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,5 +5,9 @@
      },
      "altaUser":{
           "titulo":"Create User"
-     } 
+     },
+     "dashboard":{
+          "titulo":"Job Applicants"
+     }
 }
+
