Cambios en fomrmato y en disenio de dashboard

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -7,6 +7,6 @@
           "titulo":"Crear Usuario"
      },
      "dashboard":{
-          "titulo":"Solicitantes a Trabajo"
+          "titulo":"Aplicantes"
      }
 }
