Cambios en disenio del dash de  altas asi como el alta del usuario

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,6 +26,8 @@
           "button-save":"Save Changes"
      },
      "abc-atta":{
+          "sidebarlink1":"Applicants list",
+          "sidebarlink2":"Register recruiters",
           "title":"Create User",
           "title-table":"Register recruiters",
           "crear-usuario":"Create user",
